# src/models/__init__.py
@@ -1,6 +1,6 @@
 from .action_log import ActionLog
 from .action_logger import ActionLogger
-from .auction_prices import AuctionPick, AuctionPrices
+from .auction_prices import AuctionPick, AuctionPrices, SeasonAuction
 from .configuration import Configuration
 from .draft_pick import DraftPick
 from .draft_state import DraftState
@@ -34,6 +34,7 @@ __all__ = [
     "Owner",
     "Player",
     "RosterEntry",
+    "SeasonAuction",
     "SeasonResult",
     "Team",
     "TeamSeason",
